[REFACTOR] Apply Dependency Inversion by introducing PaymentRepository interface.